tests/ui/parser/expr-rarrow-call.stderr
error: `->` used for field access or method call
  --> $DIR/expr-rarrow-call.rs:14:10
   |
LL |     named->foo;
   |          ^^ help: try using `.` instead
   |
   = help: the `.` operator will dereference the value if needed

error: `->` used for field access or method call
  --> $DIR/expr-rarrow-call.rs:18:12
   |
LL |     unnamed->0;
   |            ^^ help: try using `.` instead
   |
   = help: the `.` operator will dereference the value if needed

error: `->` used for field access or method call
  --> $DIR/expr-rarrow-call.rs:22:6
   |
LL |     t->0;
   |      ^^ help: try using `.` instead
   |
   = help: the `.` operator will dereference the value if needed

error: `->` used for field access or method call
  --> $DIR/expr-rarrow-call.rs:23:6
   |
LL |     t->1;
   |      ^^ help: try using `.` instead
   |
   = help: the `.` operator will dereference the value if needed

error: `->` used for field access or method call
  --> $DIR/expr-rarrow-call.rs:30:8
   |
LL |     foo->clone();
   |        ^^ help: try using `.` instead
   |
   = help: the `.` operator will dereference the value if needed

error: aborting due to 5 previous errors

